--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -5,7 +5,7 @@
         <title>Hello World 234</title>
     </head>
     <body>
-        <h1 th:inline="text">Hello there [[${#httpServletRequest.remoteUser}]] how are you 3</h1>
+        <h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]] !!</h1>
         <form th:action="@{/logout}" method="post">
             <input type="submit" value="Sign Out"/>
         </form>
